# static-stl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  algorithm.h  binary.h  run_unix_makefiles.sh  run_visualstudio_2013.sh  toolchain-clang.cmake  toolchain-gcc.cmake
include/etl/: binary.h  bitmap_allocator.h  bitset.h  deque.h  error_handler.cpp  flat_multiset_base.h  flat_set_base.h  fnv_1.h  forward_list.h  forward_list_base.h  hash.h  ideque.h  iflat_map.h  iflat_multimap.h  iflat_multiset.h  iflat_set.h  iforward_list.h  ilist.h  imap.h  imultimap.h  imultiset.h  intrusive_forward_list.h  ipriority_queue.h  iqueue.h  iset.h  istack.h  ivector.h  jenkins.h  list.h  list_base.h  map.h  map_base.h  multimap.h  multiset.h  murmur3.h  murmurhash3.cpp  optional.h  pearson.h  pool.h  power.h  (+6 more)
include/etl/__internal/: binary.h  integral_limits.h  type_traits.h
include/sstl/: bitmap_allocator.h  deque.h  deque_base.h  dequeng.h  flat_map.h  flat_map_base.h  flat_multimap.h  flat_multimap_base.h  flat_multiset.h  flat_multiset_base.h  flat_set.h  flat_set_base.h  fnv_1.h  forward_list.h  forward_list_base.h  freelist_allocator.h  function.h  ideque.h  iflat_map.h  iflat_multimap.h  iflat_multiset.h  iflat_set.h  iforward_list.h  ilist.h  imap.h  imultimap.h  imultiset.h  iset.h  ivector.h  jenkins.h  list.h  list_base.h  map.h  map_base.h  multimap.h  multiset.h  murmur3.h  pearson.cpp  pearson.h  priority_queue.h  (+7 more)
include/sstl/__internal/: _aligned_storage.h  _debug.h  _deque_iterator.h  _dequeng_iterator.h  _except.h  _hacky_derived_class_access.h  _iterator.h  _metaprog.h  _preprocessor.h  _type_tag.h  _utility.h  aligned_storage.h  binary.h  bitset_span.h  log.h  noexcept.h  parameter_type.h  power.h  preprocessor.h  smallest.h  warnings.h
test/: counted_type.cpp  counted_type.h  counted_type_stream_iterator.h  main.cpp  main_catch.cpp  main_unittestcpp.cpp  test_algorithm.cpp  test_aligned_storage.cpp  test_alignment.cpp  test_array.cpp  test_binary.cpp  test_bitmap_allocator.cpp  test_bitset.cpp  test_bitset_span.cpp  test_bloom_filter.cpp  test_bsd_checksum.cpp  test_checksum.cpp  test_container.cpp  test_crc.cpp  test_cyclic_value.cpp  test_deque.cpp  test_deque_iterator.cpp  test_deque_utility.h  test_dequeng.cpp  test_dequeng_iterator.cpp  test_dequeng_utility.h  test_endian.cpp  test_enum_type.cpp  test_error_handler.cpp  test_exception.cpp  test_fixed_iterator.cpp  test_flat_map.cpp  test_flat_multimap.cpp  test_flat_multiset.cpp  test_flat_set.cpp  test_fnv_1.cpp  test_forward_list.cpp  test_freelist_allocator.cpp  test_function.cpp  test_functional.cpp  (+28 more)
toolchain_files/: clang-asan.cmake  clang-msan.cmake  clang-ubsan.cmake  clang.cmake
